<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.musicalstructure.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/filesImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@drawable/folder"
            android:contentDescription="@string/files_activity"/>

        <ImageView
            android:id="@+id/searchImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:contentDescription="@string/search_activity"
            android:src="@drawable/magnifying_glass"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:text="@string/main_activity_text"/>
    <ImageView
        android:id="@+id/aboutImageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:src="@drawable/logo"
        android:contentDescription="@string/about_activity"
        />

    <ImageView
        android:id="@+id/nowPlayingImageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:src="@drawable/play"
        android:contentDescription="@string/now_playing_activity"
        />
</LinearLayout>
